--- a/암호학.md
+++ b/암호학.md
@@ -81,4 +81,212 @@ __1. 링크 암호화__
 - 물리 계층(1), 데이터링크 계층(2)에서 암호화, 중계 노드에서 암복호화, 헤더를 포함한 모든 데이터를 암호화
 
 __2. 종단 간 암호화__
--
+- 네트워크 계층(3), 전송 계층(4), 세션 계층(5), 표현 계층(6), 응용 계층(7)에서 암호화, 송수신 말단에서 암복호화한다.
+- 헤더는 암호화하지 않는다
+
+## 하드웨어 암호시스템과 소프트웨어 암호시스템
+__1. 하드웨어 암호시스템__
+- 암호처리용 하드웨어를 접속한다.
+- 키를 암호장치에서 추출하지 않고 암호화가 가능하므로 키 누출 위험을 최소화한다.
+- 전용 하드웨어로 암호화하므로 빠른 암호화가 가능하다
+
+__2. 소프트웨어 암호시스템__
+- 암호처리용 소프트웨어를 사용한다.
+- 저렴한 비용으로 실현 가능하다. 허용범위 내 적당한 안정성과 처리속도가 가능하다.
+- CPU의 발달에 따라 소프트웨어에 의한 암호화가 주류를 이루고 있다.
+
+## 워터마크 vs 핑거프린팅 vs DRM
+__1. 워터마크(Watermark)__
+- 저작권 정보를 사용자가 인식하지 못하도록 삽입한다.
+
+__2. 핑거프린팅(Fingerprinting)__
+- 저작권 정보와 구매한 사용자의 정보를 삽입하여 불법 배포자를 추적한다.
+
+ __3. 디지털 저작권 관리(DRM; Digital Right Management)__
+ - 지적재산권이 모든 유통과정에서 보호되도록 하는 기술이다.
+
+## 암호 분석의 종류
+__1. 암호문 단독공격(COA; Ciphertext Only Attack)__
+- 암호문 C만으로 평문 P나 키 K를 찾아내는 방법
+- P의 통계적 성질, 문장의 특성을 추정하여 해독한다.
+
+__2. 기지 평문 공격(KPA; Known Plaintext Attack)__
+- 암호문에 대응하는 일부 평문이 사용 가능할 때의 공격
+- C와 P의 관계로부터 P나 K를 추정하여 해독한다.
+
+__3. 선택 평문 공격(CPA; Chosen Plaintext Attack)__
+- 선택한 평문에 대응하는 암호문을 얻을 수 있을 때의 공격이다.
+- __암호기에 접근__ 하여 P에 대응하는 C를 얻어 해독한다.
+
+__4. 선택 암호문 공격(CCA; Chosen Ciphertext Attack)__
+- 선택한 암호문에 대응하는 평문을 얻을 수 있을 때의 공격이다.
+- __복호기에 접근__ 하여 C에 대응하는 P를 얻어 해독한다.
+- Decryption Oracle
+
+## 워크팩터(Work Factor)
+공격자가 암호화 방법을 깨는 데 걸리는 노력
+
+## 암호 알고리즘의 안정성의 평가
+1. 안정성의 개념
+  - 1. 암호 시스템을 공격하기 위한 계산량이 매우 커 공격할 수 없는 경우
+  - 2. 암호 해독 비용이 정보의 가치를 초과하거나 암호 해독 시간이 정보의 유효기간을 초과
+
+2. 암호제품 평가체계
+  - 1. __CC(Common Criteria) : 정보보호 제품 평가__
+    2. __CMVP(Cryptographic Module Validation Program) : 암호모듈 안정성 평가__
+- 암호기술 구현 적합성(표준 주수), 암호 키 운용 관리(저장, 파기 등), 물리적 보안(환경, EMI/EMC)을 평가한다.
+
+3. 암호기술 평가
+  - 1. 암호 알고리즘 평가 : 이론적 안정성
+    2. 암호 모듈 평가 : 이론적 아정성, 모듈의 안정성, 제품과 독립적
+    3. 정보보호 제품 펴가 : 모듈과 독립적
+    4. 응용 시스템 평가 : 상호 연동한 시스템 평가, 평가 어려움
+
+# 심화
+## 대칭 암호
+__1. DES__
+- 64비트 블록 암호 알고리즘
+- 키의 크기 : 64비트(56비트 비밀키 + 8비트 패리티 비트)
+- 안정성은 비선형 함수로 구성된 8개 S-Box에 의존
+- 16라운드 페이스텔(Feistel) 구조
+- 대체와 전치(순열)를 반복 적용
+- 복호화는 암호화의 역순
+
+대체(substitution) : 비트를 다른 비트로 대체하여 혼돈 제공
+
+전치(permutation) : 비트 순서를 재배열하여 확산 효과 제공
+
+혼돈(confusion) : 암호문과 키의 상관관계를 숨기는 것
+
+확산(diffusion) : 평문의 통계적 성질을 퍼뜨려 숨기는 것
+
+__2. 3DES(트리플 DES)__
+- DES를 3단으로 겹친 암호 알고리즘
+- 키의 크기 : 168비트(DES의 키 56비트 * 3 = 168비트)
+- 암호화 - 복호화 - 암호화 순
+- 단순 DES로도 사용가능
+
+__3. AES(Rijndael)__
+- 128비트 블록 암호 알고리즘
+- 키의 크기 : 128/196/256비트
+- 10/12/14 라운드 SPN구조(Substitution-Permutation Network), Non-Feistel 구조이며 제약이 있지만 병렬성을 제공, 대치-전치 과정을 반복
+
+__4. 그 외 대칭 암호들__
+1. IDEA : 64비트 블록, 8라운드, 키 교환용, 무차별 공격에 대응, PGP SW에서 사용
+2. Blowfish : 32~448블록, 키 교환용, 페이스텔 구조, 특허 및 라이센스 없음
+3. SEED : 128비트 블록, 16라운드, 페이스텔 구조, 비선형성 안전도에 의존
+4. ARIA : AES와 블록, 키의 크기는 동일
+
+## 블록 암호 모드
+블록 암호는 고정 길이 비트만 아호화가 가능하다. 임의의 길이 평문은 일정 크기의 블록으로 나누어 암호화
+
+__1. ECB모드(Electric CodeBook)__
+- 평문 블록, 암호문 블록이 일대일 대응
+- 마지막 블록의 길이가 부족할 시 패딩
+- 병렬처리 가능
+
+__2. CBC모드(Ciphertext Block Chaining)__
+- 1. 전 단계 결과 블록 XOR 평문 블록
+  2. 암호화(평문이 직접 암호화)
+- 복호화만 병렬처리 가능
+
+__3. CFB모드(Ciphertext Feedback)__
+- 1. 전 단계 결과 블록 암호화
+  2. XOR 평문 블록(평문을 직접 암호화하지 않음)
+ - 전 단계 결과 브록은 암호화 + XOR
+ - 복호화만 병렬처리 가능
+
+__4. OFB모드(Output Feedback)__
+- 1. 전 단계 결과 블록 암호화
+  2. XOR 평문 블록(평문을 직접 암호화하지 않음)
+- 전 단계 결과 블록은 암호화(XOR 안함),
+- 키 스트림 작업과 XOR 작업을 병행하여 고속처리 가능
+- 병렬처리 불가
+
+__5. CTR모드(CounTeR)__
+- 1. 카운터 암호화 XOR 평문 블록
+- 암호화, 복호화는 완전히 같은 구조이므로 구현이 간단(스트림 암호 특징)
+- 바뀌는 값은 비표(nonce) _ 카운터 값인 블록 번호로 구성
+- 병렬처리 가능
+
+* CFB, OFB, CTR은 스트림 모드가 가능한 블록 모드
+
+## 블록 암호 공격
+__1. 차분 공격(Differental Cryptanalysis)__
+- 평문 블록 비트의 차이와 대응하는 암호문 블록 비트의 차이를 비교
+
+__2. 선형 공격(Linear Cryptanalysis)__
+- 알고리즘 내 비선형 구조를 선형화 시켜서 키를 찾는 방법
+
+3. 전수공격법(Exhaustive Key Search)
+
+4. 통계적 분석(Statistical Analysis)
+
+5. 수학적 분석(Mathematical Analysis)
+
+## 공개키 암호
+__1. 대칭 암호의 키 배송 문제__
+- 1. 키의 사전 공유
+- 2. 키 배포센터
+- 3. Diffie-Hellman 키 교환
+- 4. 공개키 암호로 해결
+
+2. 공개키 암호
+- 수학적으로 해결하기 힘든 문제를 이용(암호화 오래 걸림)
+- 암호화키와 복호화키가 분리되어 있음
+- 키 배송 문제는 해결했지만 공개키 신뢰성 문제가 남음
+
+__3. RAS__
+- 1. 암호화 : 암호문 = (평문)E제곱 mod N, 공개키 (E,N)
+  2. 복호화 : 평문 = (암호문)D제곱 mod N, 개인키 (D,N)
+ 
+__4. RSA에 대한 공격__
+- 1. 무차별 공격(Brute Force, Factoring Attacks)
+  2. 중간자 공격(Man-in-the-middle)
+ 
+__5. 그 외 공개키 암호들__
+- 1. ElGamal : mod N으로 이산대수를 구하기 어려움을 이용
+  2. Rabin : 소인수분해가 곤란함을 이용
+  3. ECC(Elliptic Curve Cryptosystem) : 타원 곡선 암호
+- RSA보다 키가 짧으면서 동일한 성능을 제공, 구현이 용이
+- 무선, 모바일 환경에서 효율적, 전자상거래 핵심기술
+- ECDSA 서명 알고리즘 : 타원곡선, 모듈러 연산 필요
+
+## 하이브리드 암호
+- 공개키 암호의 약점인 (a) 처리속도 느림 (b) 중간자 공격에 취약 중
+- (a)를 해결하는 방법, (b)는 공개키에 대한 인증이 필요
+- 메시지는 대칭암호로 암호화
+- 대칭암호 세션키는 의사난수 생성기로 생성
+- 세션키를 공개키 암호로 암호화하여 전송
+- 수신자의 개인키로 대칭암호 세션키 복호화
+- 복호화한 세션키로 메시지 대칭암호 복호화
+
+## 해시함수
+__1. 일방향 해시함수__
+- 1. 임의 길이 메시지 - 고정 길이 해시값
+  2. 일방향성
+  3. 메시지가 다르면 해시값도 다름
+     - 같으 경우 충돌(collision) - 충돌내성 필요
+- 4. 역상 저항성, 두 번째 역상 저항성, 충돌 저항성
+ 
+__2. 메시지 인증코드(MAC; Message Authentication Mode)__
+- 1. 임의 길이 메시지 - 고정 길이 출력
+  2. 송신자와 수신자가 공유하는 키를 사용(키 배송 문제)
+  3. 제3자에 대한 증명, 부인방지를 해결할 수 없음
+ 
+## 전자서명
+- 1. 위조불가
+  2. 서명자 인증
+  3. 부인 방지
+  4. 변경 불가
+  5. 재사용 불가
+- 전자서명은 일반적인 공개키 암호와 키 사용이 반대
+- 개인키로 서명 작성(암호화), 공개키로 서명 검증(복호화)
+
+1. 메시지 복원형 전자서명
+- 서명자가 개인키로 메시지 암호화, 검증자가 공개키로 복호화
+- 기존 공개키 방식을 이용하므로 별도의 프로토콜이 필요하지 않음
+- 메시지를 일정한 크기 블록으로 나누어 서명하므로 느림
+
+2. 부가형 전자서명
+- 메시지를 해시 알고리즘으로 일정 길이로 압축하여 서명자가 개인키로 서명한 후 메시지에 덧붙여조
