--- a/접근통제.md
+++ b/접근통제.md
@@ -3,3 +3,107 @@
 
 절차는 식별(ID) - 인증(PW, 토큰 등) - 인가(ACL; Access Control List) 3단계인데 여기에 추가로 책임추적성(Accountability)라는 단계가 추가되었다.
 
+## 참조 모니터(Refernce Monitor)
+- 접근통제 결정을 중재하는 OS 요소
+- 모든 접근 요청이 PASS하는 Single Point
+- 객체로의 접근이 요청될 때만 작동
+
+## 접근통제 기본 원칙
+__1. 직무 분리(Separation of Duty)__
+- 모든 단계를 한 사람이 처리할 수 없게 분리
+
+__2. 최소 권한(Lesast Privilege Policy)__
+- 허가받은 일을 수행하기 위한 최소한의 권한만을 부여
+- Need-to-Know와 같은 의미이며, Maximum Privilege Policy와는 반대 의미
+
+## 사용자 인증
+전송받은 정보의 내용의 무결성과 송수신자가 정당한지를 확인
+1. 지식에 기반한 인증(What you know) : PW, PIN
+- 패스워드는 NTCrack, John the ripper에 크랙되기 쉽다.
+- 패스워드 유형엔 인식 패스워드, 일회용 패스워드, 패스 프레이즈가 있다.
+2. 소유에 기반한 인증(What you have) : 토큰, 스마트 카드
+- 스마트 카드는 부당 변경 방지(Tamperproof) 기능을 가지고 있다.
+- 영지식 증명(zero knowledge proofs) 필요
+- DPA(Differential) 공격 : 데이터 처리 시 0, 1의 전기 소모량 분석
+3. 개체 특성에 기반한 인증(What you are) : 생체인증
+- FAR(False Acceptance Rate, 오인식률) : 등록된 사용자로 오인식(중요)
+- FRR(False Rejection Rate, 오거부율) : 등록된 사용자를 오거부
+- CER(Crossover Error Rate, 교차 오류율) : FAR = FRR 지점, 낮을수록 정확
+4. 행위에 기반한 인증(What are you doing?!) : 서명, 움직임, 음성
+
+## 디바이스 인증기술(기기 인증)
+__1.ID/PW 기반 인증__
+- 클라이언트의 ID/PW를 서버의 DB와 비교하여 인증
+- 무선랜 고유 식별자인 SSID를 AP(Access Point)와 무선랜 클라이언트 간 공유
+- 무선 단말과 AP 간 WEP 키 이용
+- RFID 태그와 리더 간 인증
+- 휴대 인터넷(와이브로) 상호 인증(EAP-TTLS)
+
+__2. MAC 주소값 인증__
+- 접속 단말의 MAC 주소값을 인증서버 또는 AP에 등록하여 MAC 주소만으로 접속
+
+__3. 암호 프로토콜을 활용 인증__
+- 무선랜 AP를 통한 불법적 접근, 중간 공격을 차단한다.
+- 802.1x, 802.11i
+- WPA(Wi-Fi Protected Access), EAP(Extensible Authentication Protocol), RSN(Robust Security Network)
+
+__4. Challenge/Response 인증__
+- OTP와 유사하게 일회성 해시값을 생성하여 사용자를 인증
+
+__5. PKI 기반 기기 인증서 기술__
+- 매우 높은 안정성, 확실한 기기 식별 가능, 부인 방지 가능
+- 인증서 관리 필요(발급, 갱신, 폐기), CRL 관리 필요, 많은 계산량으로 처리 지연
+
+## RFID(Radio Frequency ID)
+- 무선 주파수와 제품에 붙이는 태그에 식별 전자 칩을 이용하여 물체를 식별하는 기술
+- 태그의 에너지원에 따라 수동형(리더기에서 얻음), 능동형(배터리에서 얻음)이 있다.
+
+### RFID 보안 기술
+1. 암호 기술 외 정보보호 대책
+- 1. kill 명령어 : 태그가 영구적 비활성화
+  2. sleep - wake 명령어 : 잠시 정지 및 동작
+  3. 블로커(Blocker) 태그 : 전용 IC태그를 소지하여 수많은 IC태그가 있는 것처럼 보이게 함
+  4. Faraday Cage : 금속성 박막으로 태그를 막아 무선 신호의 전달을 방해
+  5. Jamming : 강한 방해 신호로 불법적인 리더기의 접근을 막음
+ 
+2. 암호 기술 이용 정보보호 대책
+- 1. 해시 락(Hash Lock) 기법 : 태그에 one-way 해시 함수가 구현되어 있어야함
+  2. 랜더마이즈드(Randomized) 해시 락 기법 : one-way 해시 함수 + 난수 생성기 필요
+  3. XOR 기반 원타임 패드 기법 : 태그는 리더에게 비밀키 K 전송, 리더는 모든 메시지에 K를 XOR하여 전달, 태그는XOR하여 메시지 복원
+  4. 외부 재암호화 기법 : 암호문을 식별 불가능하게 다른 암호문으로 다시 생성
+  5. 가변비익 ID 방식 : 재암호화와 난수생성 회로를 IC회로가 아닌 외부 컴퓨터에 저장
+  6. 해시 체인(Hash Chain) 기반 기법 : IC태그 비용은 낮추면서 외부 컴퓨터에 의존하지 않음. 해시를 반복 적용한 값을 태그에 저장하므로 태그 개수에 비례하여 DB연산 증가
+ 
+## SSO(Single Sign On)
+- 통합 인증 체계, 한번의 시스템 접속으로 다양한 정보시스템에 재인증 없이 접근 가능
+- 구성요소 : 사용자, 인증 서버(ACL), LDAP(디렉터리 서비스), SSO Agent(Token 송수신)
+- 운영비용 감소, 보안성 강화, 편의성 증가, 중앙집중으로 효율적 관리 가능
+- SSO 서버가 단일 실패 지점(SPoF; Single Point of Failure), SSO 서버 침해 시 모든 서버 침해, SSO 개발 및 운영 비용 발생
+
+## EAM(Extranet Access Management
+- 통합 인증 관리 솔루션, ID에 따라 사용 권한을 차등 부여하는 인증, 권한 시슷템
+
+## Kerberos
+- 커버로스, 티켓 기반 인증 프로토콜이다. 분산 환경을 위한 SSO의 한 예
+- 구성요소:
+- 1. KDC(Key Distribution Center) : 키 분배 서버, 모든 사용자의 암호화 키 소유, TGS+AS
+  2. AS(Authentication Service) : 실질적으로 인증을 수행
+  3. TGS(Ticket Granting Service) : 티켓 부여 서비스
+  4. Principals : 인증을 위해 커버로스 프로토콜을 사용하는 모든 실체
+- 사전공격에 약함, 키가 단말기 저장 시 탈취 위험, TimeStamp 시간 동기화 프로토콜 필요, 비밀키 변경 필요, KDC가 SPoF 될 수 있음, KDC 확장 가능성 필요
+
+## 세사미(SESAME)
+- 커버로스 약저을 보완한 인증기술, 비밀키 분배에 공개키 암호화를 사용
+- 세사미는 티켓이 아닌 객체 인증에 PACs(Privileged Attrubute Certificates)를 이용, PACs에는 주체의 식별정보, 접근수준, 접속시간, 유효기간을 포함
+- 공개키 암호화를 사용하여 키 관리 오버헤드 감소, 커버로스보다 강력한 접근통제
+
+## 접근통제 모델
+__1. MAC(Mandatory Access Control)__
+- 강제적 접근통제
+- 관리자만이 정보자원의 분류를 설정하고 변경(중앙집중형 보안관리)
+- 벨라파둘라 모델을 근간 - 다중보안 레벨을 코드로 통합
+- 주체와 객체에는 레이블이 할당되어 있음
+- 모든 접근에 레이블링, 보안정책 확인하므로 구현이 어려움(군 시스템 사용)
+
+__2. DAC(Discretionary Access Control)__
+-
