--- a/접근통제.md
+++ b/접근통제.md
@@ -106,4 +106,136 @@ __1. MAC(Mandatory Access Control)__
 - 모든 접근에 레이블링, 보안정책 확인하므로 구현이 어려움(군 시스템 사용)
 
 __2. DAC(Discretionary Access Control)__
--
+- 임의적 접근통제, 식별기반 모델
+- 주체가 속한 그룹의 신원에 따라 접근을 제한하는 방법
+- MAC보다 사용자에게 동적으로 접근할 수 있도록 한다.(분산형 보안관리)
+- 신원기반 접근통제, 사용자기반 접근통제, 혼합방식 접근통제
+- 통제의 기준이 신분에 근거, 접근통제 메커니즘이 데이터 의미에 대한 정보가 없음
+
+신분이 접근통제에 중요하기 때문에 다른 사람의 신분으로 불법적 접근 시 결함 발생
+
+__3. RBAC(Role Based Accesss Control)__
+- 역할기반 접근통제
+- 주체와 객체의 관계를 통제하기 위해 역할 설정, 관리자는 주체 역할 할당 - 접근권한 부여
+- 역할은 사용자의 집합이면서 권한의 집합, 역할은 사용자 집합과 권한 집합의 매개체
+- 최소 권한을 허용하여 권한 남용 방지, 해킹 등으로부터 시스템을 보호(최소 권한의 원칙)
+- 시스템 상에서 오용을 일으킬 특권이 사용된 사용자를 없게한다.(직무 분리의 원칙)
+- RBAC의 종류
+  1) Role-based Model
+  2) Task-Based Model
+  3) Lattice-Based Model
+
+## 접근통제 기술
+__1. 규칙기반 접근통제(Rule-Based Access Control)__
+- 강제적인 통제 유형, 관리자가 규칙 설정, 사용자는 수정 불가
+
+__2. 제한된 사용자 인터페이스(restricted Interfaces)__
+- 특정 기능, 자원으로의 접근을 허용하지 않는 방법으로 제한(constrained User Interface)
+1) 메뉴나 셸 : 일반 사용자가 실행할 수 있는 명령어 제한
+2) 데이터베이스 뷰 : DB 내 데이터에대한 사용자 접근 제한
+3) 물리적 제한 인터페이스 : ATM에서 현금인출 시 숫자키보드만 사용가능
+
+__3. 임의의 접근통제(DAC)__
+1) 접근통제 행렬(Access Control Matrix)
+2) 접근제어 목록(Access Control Lists, ACLs)
+- 특정 자원에 대해 특정 권한을 가진 주체를 결정할 떄 편리
+- 특정 사용자에 대한 권한을 결정할 경우에는 불편
+3) 권한 리스트(Capability List, Capability tickets) : 분산환경에 적합
+- 특정 사용자에 대한 권한을 결정할 경우에는 편리
+- 특정 자원에 대해 특정 권한을 가진 주체를 결정할떄 불편
+
+## 보안 모델
+__1. 벨라파둘라 모델(BLP; Bell-LaPadula Confidentiality Model)__
+- 정보에 허가되지 않은 접근을 금지하는 기밀성을 강조한 모델, 정보 흐름
+- 정보의 불법적인 파괴나 변조보다는 불법적인 비밀유츌 방지에 중점
+
+즉, 정보가 높은 보안레벨로부터 낮은 보안레벨로 흐르는 것을 방지
+
+단순보안 규칙(Simple Security Rule)
+1) 주체가 객체를 읽기 위해서는 Clearance of Subject >= Classification of Object)
+2) 특정 수준에 있는 주체는 더 상위 수준을 가지는 데이터를 읽을 수 없다(No Read Up Rule)
+3) 주체의 취급인가가 객체의 기밀등급보다 같거나 높아야 객체를 읽을 수 있다
+
+스타 속성 규칙(Star Property Rule)
+1) 주체가 객체에 쓰기 위해서는 Clearance of Subject <= Classification of Object
+2) 특정 수준에 있는 주체는 더 하위 수준으로 데이터를 기록할 수 없다.(No Write Down Rule)
+3) 주체의 취급인가가 객체의 기밀등급보다 낮거나 같아야 객체에 기록할 수 있다.
+
+특수 별 속성 규칙(Strong Star Property Rule)
+1) 읽기와 쓰기 능력을 가진 주체는 동일한 수준에서만 수행할 수 있다.
+2) 읽고 쓰기를 할 수 있는 주체는 비밀취급 인가권과 데이터 수준이 동일해야 한다.
+
+__2. 비바 무결성 모델(Biba Integrity Model)__
+- BLP을 보완한 최초의 수학적 무결성 모델, 비인가자들의 데이터 변형 방지만 취급
+- 부적절한 변조방지(무결성)을 목적으로 한ㄷ자.
+
+단순 무결성 원리(Simple Integrity Axiom)
+1) Integrity Level of Subject >= Integrity Level of Object이면 주체가 객체를 읽을 수 없다.
+2) 주체는 더욱 낮은 무결성 수준의 데이터를 읽을 수 없다.(No Read Down)
+
+권한 속성(Invocation Property)
+1) 더 높은 무결성 수준의 주체를 호출 불가
+
+__3. 클락-윌슨 무결성 모델(Clark-Wilson Intergrity Model)__
+- 무결성의 3가지 목표를 모델을 통해서 각각 제시한다.(비인가자 수정 방지, 내외부 일관성 유지, 합법적 사람의 불법적 수정 방지(직무 분리))
+- 접근 3요소(주체, 소프트웨어, 객체), 직무 분리, 감사를 통해서 무결성 3가지 목표 구현
+- 접근 3요소의 정확한 트랜잭션과 사용자의 임무 분할을 통해 무결성을 구현
+
+__4. 기타 접근통제 보안정책 모델__:
+1) 래티스 모델(Lattice Models) : 정보흐름을 안전하게 통제하기 위한 보안모델
+2) 상태 기계 모델(State Machine Models) : 상태 개념, 모든 권한과 객체를 접근한 주체 통제
+3) 비간섭 모델(Noninterference Models) : 한 보안수준의 명령과 활동은 타 보안수준에 비간섭
+4) 정보흐름 모델(Information Flow Models) : 정보가 높은 단계에서 낮은 단계로 흐르지 않음
+5) 만리장성 모델(Brewer-Nash Models) : 회사 간 정보흐름이 일어나지 않도록 접근 통제
+
+## 접근통제 관리
+__1. 중앙집중형 접근통제__
+- 단일 엔티티가 모든 기업의 자원 접근에 대해 책임을 지는 것
+- 통제방식으로 AAA(Authentication, Authorization, Accountability)
+1) AAA서버 : 인증 - 권한 검증 - 과금
+2) 콜백(Call Back) : 사용자 전화 - 콜백 서버가 DB 내 전화번호로 전화 - 접근통제
+3) 래디우스(RADIUS) : 다이얼 업 네트워킹으로 네트워크 접속 시 외부 사용자 인증 프로토콜
+4) TACACS(UDP)/TACACS+(TCP)
+5) RADIUS를 개선한 DIAMETER: 양방향, 효율적 전송계층 관리, End to End(TLS) 종단 간 보안 지원, 패킷 페이로드 전체 암호화
+
+감시계기(Watchdog) : 소프트웨어 오류를 탐지, 패킷 재전송, 통신 재연결 등을 결정
+
+__2. 분산화된 접근통제__
+- 각 자원의 소유자가 인증 및 인가, 책임 추적을 직접 통제
+- 일관성 유지 어려움, 직원 이동, 퇴사 시 관리 어려움, 표준화 부족, 권한 오버래핑, 보안 문제
+
+__3. 혼합 접근통제__
+- 네트워크 관리자는 접근 대상 제어, 사용자들은 자원 접근 대상 제어
+- 관리 복잡, 지속적 관리 필요
+
+## 풋 프린팅(Footprinting)
+해킹 시도 대상의 정보를 수집하는 사전 작업
+
+## 접근통제 보증
+1. 침투 테스트
+- 발견 - 열거 - 취약점 매핑 - 이용 - 관리자 보고
+- 침투팀(Blue Teaming : 사전 동의 있음, Red Teaming : 사전 동의 없음, 시간, 비용 높음)
+- 외부 테스트 : 무지식(Zero-knowledge) 테스트, 부분지식(Partial-knoowledge) 테스트
+- 내부 테스트 : 완전지식(Full-knowledge) 테스트(화이트 박스 시나리오), 타겟 테스트, 더블 블라인드 테스트 : 블라인드 테스트 방식을 확장, 알지 못하는 상태에서 실시
+
+2. 허니팟(Honey Pot)
+- 희생양 역할로 설정된 컴퓨터
+- 해커, 크래커의 공격방식에 대한 정보를 취득하기 위해 유인하는 시스템
+- 취약점에 대한 패치가 발표되지 않은 시점(Zero-Day)에 발생하는 공격을 사전에 탐지
+- 목적 : 침입자 유인, 크래커 침해방식 수집, 조기 인식
+
+*유인(enticenment)과 함정(entrapment)
+- 공격자가 위법을 저지르도록 포트를 열고 서비스를 재공한다면 유인의 예로 적접, 함정은 벌법하다.
+
+## 접근통제 보안위협 및 대응책
+1. 패스워드 크래커
+2. 사회공학
+3. 피싱
+4. 스미싱
+5. 백도어/트랩도어
+6. 루트킷(Rootkit) : 불법 해킹 기능들의 모음, 설치되면 경로를 바꾸고, 명령어를 은폐하여 숨김
+7. 은닉채널(Covert Channel) : 비밀정보를 몰래 전달, 승인없이 정보를 받는 길
+8. 방사(Emanation) : 전기적 신호 가로채기
+- 대응책 : 템페스트, 컨트롤 존, 백색 잡음
+9. 워 드라이빙(War Driving) : 이동하면서 보안이 취약한 AP를 찾아냄
+- 대응책 : SSID 브로드캐스팅 방지, 128비트 이상 WEP, MAC 필터링
