--- a/네트워크 보안.md
+++ b/네트워크 보안.md
@@ -247,3 +247,54 @@ Analyzer를 위해 트래픽 분석장비가 설치된 포트로 복사한다.
 - 백본 전송용, 태핑(Tapping, 꺼내는 것) 어려워 보안적 강점을 제공
 
 무선랜 기술적 보안
+1. 무선랜 인증 기술
+  - 1) SSID(Service Set ID)
+    - AP를 구분하는 ID, 무선랜을 통해 전송되는 패킷 헤더에 덧붙여지는 32비트 식별자
+    - AP에 SSID를 부여하고 무선랜 클라이언트들은 SSID를 선택하여 통신
+    - AP 장비에서 설정된 SSID 정보를 이용하여 사용자의 접속을 통제, 관리
+  - 2) MAC 주소 필터링
+    - MAC 주소는 네트워크 카드 제조사에 의해 부여된 48비트 하드웨어 주소
+    - AP 장비에 통신기기 고유 MAC 주소를 등록하여 사용자를 통제, 관리
+    - AP마다 무선랜을 사용하는 모든 PC의 MAC 주소를 등록하므로 관리 어려움
+  - 3) EAP(Extensible Authentication Protocol)
+    - 단순한 캡슐화 방식을 적용하여 PPP, 802.3, 802.11을 포함한 다양한 링크 계층에 적용
+    - 다중 인증 메커니즘을 제공하므로 스마트 카드, 커버로스, 공용키, OTP, TLS 등 적용 가능
+  - 4) WEP(Wired Equivalent Privacy)
+    - 데이터링크 계층, 공유키(대칭키)인 WEP 키를 이용하여 사용자를 인증
+    - 데이터 암호화와 함께 적용 가능, 무선랜 장비에서 WEP 구현 및 인증 절차 간결
+    - 단방향 인증으로 인하여 복제 AP 등에 취약할 수 있음
+    - WEP 키 값이 하나의 공유키를 사용하므로 키 값이 유출된 경우 보안 문제 발생
+2. 무선랜 암호화 기술
+  - 1) WEP(Wired equivalent Privacy)
+    -  유선 등등 프라이버시, 유선 네트워크와 동일한 보안성을 가진 기술이란 의미
+    -  데이터링크 계층 보안 프로토콜, 공유키(대칭키) 구조 암호화 알고리즘
+    -  초기화 벡터 IV, 스트림 암호화 알고리즘 RC4, 유사 랜덤 넘버 생성기 PRNG
+    -  CRC-32 알고리즘, 무결성 검사 값 ICV
+
+    24비트 IV + 40비트 WEP 키 > 64비트 RC4 > PRNG
+    
+    (XOR)
+    
+    평문 > CRC-32 > ICV(결과) 암호문 전송
+
+    - WEP 암호화 유형 Static WEP : RC4 알고리즘은 일정량 데이터 모으면 역계산 취약점 존재
+    - Dynamic WEP : 암호화 키를 주기적 변경, RC4 사용하므로 프로세싱 파워 강화 시 취약
+  
+  - 2) TKIP(Temporal Key Integrity Protocol)
+    -  RC4 보안 문제점 개선하기 위해 Key Mixing 함수, Dynamic WEP Key(Temporal Key), 메시지 무결성 보장을 위한 스펙(spec)을 정의한 통신 규약
+    -  48비트의 확장된 길이 초기화 벡터 IV 사용, WEP의 CRC-32보다 안전한 MIC(Message Integrity Check) 사용
+    -  802.11i, WPA에 적용, WEP의 기본적 취약점 그대로 존재
+   
+  - 3) CCMP(Counter mode with CBC-MAC Protocol)
+    - AES 블록 암호를 사용
+    - RC4로 전송되는 데이터 패킷마다 증가되는 초기 벡터 IV를 WEP 키와 함께 해시 새로운 WEP키를 생성하여 패킷마다 키 지정이 가능하도록 하여 암호화
+    - 802.11i를 사용한 보안 기본 모드, 더 높은 보안성
+    - TKIP는 과도기적 기법, CCMP는 기존 하드웨어를 고려하지 않고 보안성 고려하여 새로 설계
+   
+3. 무선랜 인증 및 암호화 복합 기술
+  - 1) 802.1x
+    - 브리지 또는 무선 AP의 물리적인 포트 사용권을 획득하는 절차
+    - 외부 단말이 내부 네트워크로 접근할 때 브리지/스위치, AP에서 인증을 수행하여 접근 통제
+    - 인증자 : 브리지 또는 AP, 서플리컨트 : 사용자 단말, 인증 서버 : 인증 서비스 제공
+    - RADIUS(remote Authentication Dial-In User Service) 서버
+  - 2
