--- a/네트워크 보안.md
+++ b/네트워크 보안.md
@@ -297,4 +297,295 @@ Analyzer를 위해 트래픽 분석장비가 설치된 포트로 복사한다.
     - 외부 단말이 내부 네트워크로 접근할 때 브리지/스위치, AP에서 인증을 수행하여 접근 통제
     - 인증자 : 브리지 또는 AP, 서플리컨트 : 사용자 단말, 인증 서버 : 인증 서비스 제공
     - RADIUS(remote Authentication Dial-In User Service) 서버
-  - 2
+  - 2) WPA(Wi-Fi Protected Access)
+    - 802.11i 일부 기능을 수용, 하드웨어 변경 없이 소프트웨어 업그레이드로 지원 가능
+    - 암호화 기법 TKIP 사용, 다른 보안 표준인 IEEE802.1X, EAP를 기반으로 인증 강화
+    - RADIUS, Kerberos 등과 호환 가능, 사전 공유 키 방식으로 AP 비밀번호 수동 설정 제공
+  - 3) WPA2
+    - TKIP를 대체하기 위해 AES에 기반을 둔 CCMP 암호화 방식 사용, IEEE802.11i 수정안 포함
+  - 4) WAP(Wireless Application Protocol)
+     - 컴퓨터나 모뎀을 거치지 않고 이동형 단말기에서 인터넷에 접속하는 통신규약
+     - 통신 품질이 불안정한 휴대 전화망을 고려하여 게이트웨이 방식 채용
+     - 휴대전화망과 인터넷 사이 HTML을 WML(Wireless Markup Language)로 변환
+     - WTLS(Wireless Transport Layer Security): 무선 전송계층 보안
+  
+       WAP에서 전송 계층 보안을 위해 적용하는 TLS 기반의 보안 프로토콜
+
+  ## 네트워크 5대 관리
+  계정 관리, 구성 관리, 성능 관리, 장애 관리, 보안 관리
+
+  ## SNMP(Simple Network Management Protocol)
+  - 호스트인 관리자는 라우터나 서버 에이전트들의 집단을 제어하고 감시
+  - 물리적으로 상이한 네트워크에 설치된 장치들을 감시할 수 있도록 응용 계층(7) 설계
+  - 물리적 특성과 네트워크 관리 작업을 분리하여 서로 다른 LAN, WAN에서도 사용
+  - SNMP 호스트인 관리자(클라이언트)는 SNMP 서버 라우터 또는 호스트
+  - 에이전트(서버)는 DB에 정보 저장, 관리자들은 DB를 읽고 라우터가 특정한 동작 지시 가능
+  - 1) 관리자가 에이전트에서 정의된 객체의 값을 읽음
+    2) 관리자가 에이전트에서 정의된 객체에 값을 저장
+    3) 에이전트가 관리자에게 경고 메시지(Trap) 송신
+  - 보안 및 원격관리 특성 추가, 메시지 인증, 기밀성, 무결성 허용하여 다른 보안 관점 설정 가능
+  - SMI(Structure of Management Information), MID(Management Information Base)
+  - SNMP: 관리자와 에이전트 간 패킷의 형식 정의, 포트 161(에이전트), 162(관리자)
+  - SMI: 객체 이름과 데이터 유형 정의, 인코딩 방식, 객체와 유형 연결 비관여
+  - MIB: 관리될 객체의 수 결정(관리 정보), 이를 규칙에 따라 명명, 객체와 유형 연결
+
+## 원격 접속 서비스
+1. TELNET
+- TErminaL NETwork, 가상 터미널에 대한 표준 ICP/IP 프로토콜, 원격 시스템과 연결 가능
+- 시분할 환경 설계, 사용자가 시분할 시스템에 등록(로컬 로그인) 시 터미널 드라이버가 승인
+- 사용자가 원격 장치에 접근할 때 원격 로그이 필요: TELNET 클라이언트, 서버 프로그램 사용
+- 사용자의 키 입력 > 터미널 드라이버 > 로컬 운영체제 문자 수용(문자 해석 하지 않음) > TELNET 클라이언트 문자 수용, NYT(Network Virtual Terminal)로 번역 > TCP/IP 스택 전달
+- 네트워크 가상 터미널(NVT)를 통해 TELNET 클라이언트는 네트워크에 전달
+- TELNET 서버는 NVT 형태에서 원격 컴퓨터가 수용가능한 형태로 데이터 번역
+- 대칭성(Symmetry), 클라이언트와 서버에게 동일한 기회
+- 보안 문제 : 로그인 네임과 암호를 사용하지만, SNOOP을 통해 도청 가능, 취약함
+
+2. Rlogin
+- 원격 로그인 프로토콜, 인터넷 표준이 아니며 BSD 시스템 원격 접속을 위해 설계
+- TELNET에 비해 단순하고 별도 옵션 협상기능 없음
+
+3. SSH(Secure Shell)
+- TELNET, Rlogin을 대체하기 위해 설계, 강력한 인증 방법 및 안전성 강화
+- 22번 포트 사용, 암호화 기법을 사용하기 때문에 노출되어도 암호화된 문자로 보임
+ - SSH-TRANS(전송 계층), SSH-AUTH(인증), SSH-CONN(연결)
+ - 포트 전달(Port Forwarding): 보안 서비스를 제공하지 않는 응용 프로그램 접속을 위해 SSH에서 이용 가능한 안전한 채널을 사용한다. SSH 터널링: 메시지 터널을 생성
+ - TELNET 클라이언트과 서버 간 모든 요청이 터널을 통해 전달된다.
+
+---
+## 네트워크 기반 공격
+- 물리적 위협
+- 기술적 공격
+1) 수동적 공격 : 통신회선 상 정보를 무단으로 취득 - 제 3자 접속 방지, 데이터 암호화로 방어
+2) 능동적 공격 : 통신회선 상 정보를 변조, 위조 - 암호화와 데이터 무결성 확인으로 방어
+
+## 서비스 거부 공격(DoS)
+- 정당한 사용자가 적절한 시간 내에 자원을 이용하는 것을 방해하는 행위, 시스템 과부하
+- 소프트웨어 취약점을 이용한 공격, Flooding 유형 공격
+
+### 1. TCP Synflooding Attack
+- TCP 연결 과정의 3-Way Handshaking에서 Half-Open 시도가 가능하다는 취약점을 이용 공격자가 다수의 Syn 신호를 대상자에게 전송하면 대상자는 Ack/Syn 신호를 공격자에게 전달하는데 이 때 공격자가 Ack 신호를 발송하지 않으면 대상자는 일정 시간 신호를 기다리게 된다.
+-  이 공격은 인터넷에 연결된 모든 TCP 서비스에 피해
+-  완벽한 해결책은 없으며 영향 감소 방법만이 알려짐
+
+대응책
+1) 접속 타임아웃 타이머 시간을 짧게 단축
+2) 큐 사이즈 증가(자원 감소 문제점 발생 가능)
+3) IDS 설치를 통해 동일 형태 패킷 탐지, 해당 IP대역 차단
+4) 방화벽에 RST 패킷을 보냄으로써 TCP 세션을 없음
+
+### 2. SMURF Attack
+- DoS 공격 중 가장 피해가 크며 IP 위장, ICMP 특징을 이용한 공격
+- ICMP 브로드캐스트, 공격자, 증폭 네트워크, 대상 서버를 이용
+- 공격자는 IPㄷ를 대상자의 IP 주소로 위장하여 ICMP를 브로드캐스트로 다수 시스템들에게 전송
+- 이 때 브로드캐스트를 수신한 다수 시스템들은 ICMP ECHO 패킷을 대상 서버로 전송한다.
+- 대상 서버는 다수의 ICMP ECHO를 수신하여 시스템 성능 문제를 일으키게 된다.
+- 이 때 다수 시스템들은 다수의 ICMP ECHO를 발생하므로 증폭 네트워크로 불린다.
+
+대응책
+1) 라우터에서 다른 네트워크로부터 자신의 네트워크로 들어오는 IP 브로드캐스트를 막는다.
+2) 호스트는 IP 브로드캐스트 주소로 전송된 ICMP 패킷에 응답하지 않도록 설정한다.
+
+### 3. UDP Flood Attack
+- UDP는 비연결성 프로토콜로써 데이터를 전달하기 위해 연결 절차가 필요없다.
+- 대상 서버에 UDP 패킷을 전송하여 목적지 시스템 포트에 어떤 어플리케이션이 서비스 하는지 조사하여 없다면 ICMP Unreachable 패킷을 전송하는데 이 때 너무 많은 UDP 패킷이 대상 서버에 전송되면 시스템에 과부하가 발생
+
+대응책
+1) 사용하지 않은 UDP 서비스를 중지
+2) 방화벽을 이용하여 패킷 필터링
+3) 리눅스 시스템의 경우 chargen과 echo 서비스 중지
+
+### 4. Land Attack
+- 공격자가 임의로 자신의 IP 주소와 포트를 대상 서버의 IP 주소와 포트로 변경하여 공격
+- SYN Flooding처럼 동시 사용자 수를 증가시키며 CPU 부하를 올리게 된다.
+
+대응책
+
+탐지방법
+1) 공격자가 보낸 패킷의 TCP를 분석
+2) TCP 패킷의 소스 IP, 포트와 목적지 IP, 포트가 동일한지 확인
+3) 공격자가 보낸 패킷을 카운트하여 시간 내 공격 인정 수가 많으면 Land Attack으로 탐지
+
+조치방법
+1) 라우터나 패킷 필터링 도구를 이용하여 자신과 동일한 주소를 가진 외부 패킷 필터링
+2) 공격 정보를 네트워크, 시스템 관리자에게 알려서 IPS시스템에서 소스 IP, Port와 목적지 IP, Port가 동일하면 차단하도록 설정
+
+### 5. Ping of Death
+- 핑을 이용하여 ICMP 패킷을 정상 크기(65535 bytes)보다 아주 크게 만드는 것
+- 크게 만들엉진 패킷은 라우팅되어 대상 서버에 도달하는 동안 작은 조각이 된다.
+- 대상 서버는 작게 조각화된 패킷을 모드 처리해야 되기 때문에 많은 부하가 걸리게 된다.
+
+### 6. Teardrop Attack
+- 네트워크에서 IP가 패킷을 전송할 때 IP 단편화가 발생하게 된다.
+- 수신자는 단편화된 데이터를 재조립을 통해 복구하는데, 이 때 정확한 조립을 위해 오프렛(Offset)이라 값을 더해야 한다.
+- 공격자는 오프셋 값을 단편화 간 중복되도록 고의로 수정하거나 정상적인 오프셋보다 큰 값을 더한다.
+- 오프셋 범위를 넘어서는 오버플로우를 발생시켜 시스템을 마비시키는 DoS 기법
+- 대상 서버는 네트워크 연결이 끊어지거나 Blue Screen of Death 오류 화면을 표시
+- 시스템에 직접적인 피해는 없으나 시스템의 정지로 인해 피해가 있을 수 있다.
+- 현재 대부분 시스템에서 IP 패킷 재조합 시 0보다 작은 패킷 처리 루틴으로 방어
+
+### 7. Inconsistent Fragmentation Attack
+1) Bonk
+  - 패킷을 단편화하여 전송할 때 조작하여 대상 서버에 시스템 부하를 증가시킨다.
+  - 처음 패킷을 1번을 보낸 후 다음 패킷을 보낼 때 순서번호를 모두 1번으로 조작
+2) Boink
+  - 처음 패킷을 1번으로 보낸 후 다음 패킷을 100번, 다음 패킷을 200번 등 정상적으로 보내다가 20번 째 패킷을 2002, 21번 째 패킷을 100등으로 중간에 패킷 시퀀스 번호를 비정상적인 상태로 보내는 공격 기술이다.
+
+### 8. IP Fragmentation Attack-Tiny Fragmentation
+- 최초의 단편화를 아주 작게 만들어서 IDS나 패킷 필터링 장비를 우회하는 공격
+- TCP 헤더가 2개의 단편화로 나누어질 정도로 작게 쪼개서 목적지 TCP 포트 번호가 첫 번째 단편에 위치하지 않고 두 번째 단편에 위치하도록 조작한다.
+- IDS나 패킷 필터링 장비는 필터링 결정을 위해 포트 번호를 확인하는데 포트 번호가 포함되지 않을 정도로 작게 단편화된 첫 번째 단편을 통과시킨다.
+- 실제 포트 번호가 포함된 두 번째 단편은 검사하지 않고 통과된다.
+- 대상 서버에서는 이 패킷들이 재조합되어 공격자의 의도를 달성한다.
+
+## DDoS 공격
+- 여러 대의 컴퓨터를 일제히 동작하게 하여 특정 사이트나 시스템을 공격함으로써 엄청난 분량의 패킷을 동시에 범람시켜 네트워크 성능 저하나 시스템 마비를 가져옴
+
+구성 요소
+1) 공격자 : 공격자의 주 컴퓨터
+2) 마스터 : 공격자의 명령을 받는 시스템으로 여러 대의 슬레이브를 관리
+3) 슬레이브/좀비 : 공격 대상에 직접적인 공격을 가하는 시스템으로 감염된 시스템
+4) 표적 : 공격 대상이 되는 시스템
+
+공격방식
+1) 트리누(Trinoo) 공격
+- UDP flood 서비스 거부 공격을 유발하는 도구, 몇 개의 서버와 많은 클라이언트로 구성 공격자는 트리누 마스터에 접속하여 마스터에게 대상에 공격 수행 명령을 내린다.
+2) TFN 공격
+- UDP flood 공격 뿐만 아니라 TCP SYN flood 공격, ICMP echo 요청 공격, SMURF 공격 가능
+3) Stacheldraht 공격
+- 트리누와 TFN에서 발전한 도구로써 마스터와 에이전트 데몬 간 통신에 암호화 기능 추가
+4) TFN2K 공격
+- 통신에 특정 포트가 사용되지 않고 암호화되어 있음
+
+TCP,UDP,ICMP 복합적 사, 포트 임의 결정 가능, 포트 임의 결정 가능, 지정된 TCP 포트에 백도어 실행 가능
+
+대응책
+1) 라우터의 ACL을 이용하여 공격주소와 포트를 등록하여 관리
+2) 라우터의 Ingress 필터링을 이용하여 지정 IP 도메인의 패킷만이 라우터를 통과하게 필터링
+3) 라우터의 Egress 필터링을 이용하여 IP 위조 패킷이 나가는 것을 ISP 단계에서 필터링
+4) 라우터의 CAR(Committed Access Rate, 약속된 접근 비율) 기능을 이용하여 단위시간 동안 일정량 이상의 패킷이 들어올 경우 그 이상은 통과하지 않도록 관리
+5) 방화벽의 포트 필터링을 이용하여 방지
+6) 시스템 패치, Hot Fix를 이용하여 취약점과 버그를 이용하는 악성코드, 침입을 방지
+7) 아정적인 네트워크 설계로써 취약점이 없도록, SPoF이 없도록 설계
+8) IDS(Intrusion Detection System)을 이용하여 DDoS 공격을 탐지
+9) 로드 밸런싱을 이용하여 대용량 트래픽을 분석처리하고 네트워크 대역폭 성능을 강화
+10) 서비스 별 대역폭을 제한하여 공격에 따른 서비스 피해를 최소화
+11) DPI(Deep Packet Inspection)을 이용하여 네트워크 전 계층 패킷과 콘텐츠 검사
+
+## DRDOS(Distributed Reflection DoS)
+- 분산 반사 서비스 거부 공격
+- 별도의 에이전트 설치 없이 프로토콜 구조의 취약성을 이용하여 정상적으로 운영하는 시스템을 공격의 에이전트로 활용한다.
+- 공격 에이전트를 찾아 제거하는 DDoS 공격의 방어와는 다르게 공격자가 사용하기 쉽고, 공격을 당한 사이트의 복구가 어렵다.
+
+## 포트 스캔
+- 공격자가 목표 대상 내 서버나 호스트들의 생존여부와 서비스 등을 확인, 식별
+
+- TCP Open 스캔 : 열린 포트에 세션을 성립시켜 활성화 상태 파악, 로그 남고 느림
+- 열린 경우 : 공격자 SYN 보냄 - 서버 SYN+ACK 보냄 - 공격자 ACK 보냄
+- 닫힌 경우 : 공격자 SYN 보냄 - 서버 RST+ACK 보냄
+
+- TCP Half Open 스캔 :
+- 열린 경우 : 공격자 SYN 보냄 - 서버 SYN+ACK 보냄 - 공격자 RST 보냄(끊음)
+- 닫힌 경우 : 공격자 SYN 보냄 - 서버 RST+ACK 봼
+
+- 스텔스 스캔
+- 로그를 남기지 않거나, 공격 대상을 속이고 자시의 위치를 숨기는 모든 스캔 통칭
+- 세션 완전히 성립하지 않고 포트 활성화 여부를 알아내므로 로그가 남지 않음
+1) FIN 스캔 : Finish 패킷을 보내 포트가 열린 경우 응답없음, 닫힌 경우 RST
+2) NULL 스캔, XMAS 스캔 : NULL은 플래그 없는 경우, XMAS는 플래그 모두 설정(같으 결과)
+
+- UDP 스캔 ; UDP 패킷이 전달되는 동안 라우터나 방화벽에 손실될 수 있으므로 신뢰 어려움
+- 열린 경우 : 공격자 UDP 패킷 보냄 - 서버 응답 없음
+- 닫힌 경우 : 공격자 UDP 패킷 보냄 - 서버 ICMP Unreachable 보냄
+
+- Remote Finger Printing : 텔넷 IP 포트 형태로 포트를 서비스 형태로 지정하여 명령어 실행 OS, 서비스의 정보를 얻을 수 있다.
+- TCP/IP 특성 이용, RFC 문서를 통한 전송 응답 형태 이용
+
+## 스푸핑
+- 공격자가 호스트의 IP나 이메일 주소를 바꾸어서 해킹하는 방법 신뢰관계 시스템 간 정보를 교환할 때 공격자가 한 쪽으로 위장하여 정보를 탈취하는 행위
+
+## 패킷 스나핑
+- 스니핑은 상대방의 패킷 교환을 엿듣는 것을 의미한다. 네트워크 트래픽을 도청하는 과정
+- TCP/IP 프로토콜은 이용한 통신에서는 패킷 암호화가 되지 않은 상태이므로 도청 가능성
+- 허브 환경 스니핑, 스위치 환경 스니핑
+
+대응책
+1) 암호화 기능 및 보안 프로토콜을 사용한다. (SSL, IPSEC, PGP)
+2) 스니핑 탐지 방안
+- Ping request 이용 : 위조 MAC 주소로 ping echo request를 다른 시스템에 보냈을 때 만약 ping echo reply를 받게 된다면 해당 호스트는 스니핑하고 있는 호스트이다.
+- ARP 이용 : 위조 ARP로 ARP request를 보냈을 때, response가 온다면 스니핑 호스트
+- Anti-sniffier : 네트워크 카드의 promiscuous(무차별) 유무를 체크하여 스니핑을 체크
+
+## 세션 하이재킹
+- 연결 중인 세션을 하이재킹하는 공격기법, 접근 권한을 얻기 위한 인증 절차를 건너뜀
+1) 목표설정
+2) 시퀀스 넘버 난이도 검사
+3) 공격 대상 세션 설정
+4) 시퀀스 넘버 추측
+5) 사용자 DoS 공격
+6) 세션 하이재킹
+
+대응책 
+암호화, 지속적인 인증, 패치
+
+그 외 Remote Attack
+- 공격자는 원격 Remote Attack 후에 접근권한을 얻어 Local Attack
+- Trojan은 건전하게 위장하여 사용자가 실행하도록 만든 후 정보 유출, 자신을 숨김
+- Exploit는 OS 버그를 이용하여 루트 권한 획득, 특정 기능을 수행하는 공격 코드
+
+## 침입 탐지 시스템(IDS; Intrusion Detection System)
+- 컴퓨터나 네트워크의 이벤트들을 모니터링하여 침입발생 여부를 탐지하고 대응
+- 로컬 네트워크나 호스트에 위치하여 자원의 무결성, 기밀성, 가용성 저해 행위 탐지
+- IDS 실행 단계
+1) 데이터 수집(Raw Data Collection): 탐지대상으로부터 생성되는 감사 데이터 수집
+2) 데이터 가공 및 축약(Data Reduction and Filtering) : 침입 판정 가능하도록 전환
+3) 침입분석 및 탐지 : 핵심 단계이며, 비정상적 행위 탐지 기술과 오용 탐지 기술
+4) 보고 및 대응(Reporting and Response) : 침입 판정 시 대응, 보안관리자에게 보고
+
+IDS 분류
+1. 탐지방법
+  - 1) 지식 기반/오용 침입 탐지
+    - 특정 공격 분석결과를 바탕으로 패턴 설정, 패턴(시그니처)와 비교하여 일치하면 침입 판정
+    - 오탐률(False Positive) 낮음, 전문 시스템(추론, 지식베이스) 이용, 트로이목마, 백도어 탐지
+    - 새로운 공격탐지를 위해 지속적 갱신 필요, 패턴 없는 공격 탐지 불가, 속도 문제
+  - 2) 행위 기반/비정상행위 침입 탐지
+    - 사용자 행동양식을 분석하여 정상 행동과 비교해 이상함, 급격한 변화가 발견되면 침입 판정
+    - 정량적/통계적 분석, 형태 관찰, 프로파일 기반 이상 여부(I/O 사용량, 로그인 횟수, 패킷량)
+    - 인공지능 알고리즘 스스로 판단하여 패턴 업데이트 불필요, 새로운 공격탐지 가능
+    - 오탐률(False Positive) 높음, 정상과 비정상 구분을 위한 임계치 설정 어려움
+   
+2. 대응방법
+  - 1) 수동적 대응 : 침입 탐지 시 별도 대응 없이 관리자에게 경보
+    2) 능동적 대응 : 침입 탐지 시 스스로 대응을 수행하여 공격을 막거나 방어
+   
+3. 데이터 수집원
+  - 1) 네트워크 기반 IDS(NIDS)
+    - NIDS는 감지기를 이용, 필요 소프트웨어가 설치된 컴퓨터나 어플라이언스 장비
+    - 네트워크 세그먼트 당 하나의 감지기만 설치하면 되므로 설치 용이
+    - 무차별 모드(promiscuous mode)에서 동작하는 네트워크 인터페이스(NIC)에 설치되어 있다.
+    - 네트워크에서 실행되어 개발서버 성능저하 없음, 여러 유형 침입 탐지, 해커 IDS 공격방어
+    - 모든 네트워크 트래픽 모니터링, 분석하지만 자신에게 향하는 트래픽 관찰 불가 - HIDS 필요
+    - 네트워크 패킷이 암호화 전송 시 탐지 불가, 트래픽 증가 시 문제 야기, 오탐률 높음
+   
+  - 2) 호스트 기반 IDS(HIDS)
+    - 개인의 워크스테이션 또는 서버에 설치되어 비정상적이거나 변칙적인 행동 탐지
+    - 서버에 직접 설치되므로 네트워크 환경과 무관
+    - 사용자들로 하여금 시스템 파일 관리, 설정값 재설정, 위험에 노출되지 않도록 이용
+    - 기록되는 다양한 로그를 통해 정확한 침압 벙자 가능, 트로이목마, 백도어, 내부자 공격 탐지
+    - 해커에 의한 로그 변조 가능성, DoS에 무력화 가능, 호스트 성능에 의존적, 리소스 사용
+
+     *NIDS는 네트워크 트래픽을 분석 - HIDS는 컴퓨터 자체를 제한
+
+4. 탐지시점
+  - 1) 사후분석 시스템 : 수집된 검사 데이터를 정해진 시간에 분석하여 침입 즉시 대응 불가
+    2) 실시간 탐지 시스템 : 실시간 정보수집과 동시에 감사 데이터 발생, 침입 탐지와 대비책 실행
+   
+    *침입 탐지 중
+    1. 오탐(False Positive) : 정상 사용을 공격으로 판단(옳다고 잘못 판단)
+    2. 미탐(False Negative): 공격 정상 사용으로 판단(틀리다고 잘못 판단)
+
+    *스텔스 모드 탐지 시스템 : IDS 호스트에 네트워크 감시용, 관리용 인터페이스 네트워크 감시용 인터페이스는 외부로 패킷을 보내지 않음(외부에서 인지 못함)
+
+IDS의 장단점
+- 장점 : 침입차단시스템보다 적극적인 방어, 내부 사용자 탐지 및 방어, 근원지 추적 가능
+- 단점 : 관리와 운영 어려움, 새로운 침입에 취약, 근본적 해결책 안됨
+- False Positive가 많이 발생하는
