--- a/네트워크 보안.md
+++ b/네트워크 보안.md
@@ -588,4 +588,236 @@ IDS 분류
 IDS의 장단점
 - 장점 : 침입차단시스템보다 적극적인 방어, 내부 사용자 탐지 및 방어, 근원지 추적 가능
 - 단점 : 관리와 운영 어려움, 새로운 침입에 취약, 근본적 해결책 안됨
-- False Positive가 많이 발생하는
+- False Positive가 많이 발생하는 공격 분별 어려움, 수동작, 새로운 공격탐지에 한계
+
+## 침입 방지 시스템(IPS; Intrusion Prevention System)
+- 다양한 보안기술을 이용하여 침입 전에 막고, 유해 트래픽을 차단하는 능동형 보안 솔루션
+- IDS는 탐지적이고 사후에 조치한다면, IPS는 예방적이고 사전에 조치를 취하는 기술
+- IDS가 구축된 영역에는 다수의 호스트 기반 IPS와 네트워크 기반 IPS 장비가 있다.
+
+IPS 분류방법
+1. 공격 패턴 인지 방식
+- 1) Signature Based IPS : 침입방지 패턴 DB 기반, 공격에 시그니처를 정의하여 매칭되면 차단
+  - 새로운 공격의 경우 시그니처 리스트가 업데이트되지 않아 차단 불가하지만, 오탐 가능성 적음
+  - IDS와 기본적으로 동일한 형태의 인지 방식이며 대부분의 IPS가 채택하는 방식
+- 2) Heuristics Based IPS : Anomaly Detection/Prevention 방식
+  - 알려지지 앟은 공격에도 수집, 축적되는 정보를 이용하여 오탐을 줄이고 대처하는 방식
+ 
+2. 구성 형태
+- 1) Network IPS(NIPS) : 방지능력, 속도를 위해 In-Line 위치, 독립된 솔루션 기반 제푸
+  - 세션 기반 탐지 지원, 다양한 방지 방법(시그니처, Protocol Anomaly, Action)을 이용
+  - 실시간 패턴 처리, 오탐 최소화, 변형 공격과 오용 공격의 탐지, 실시간 반응 기술 사용
+  - 하드웨어 기반, 호스트 독립적, 고성능
+- 2) Host IPS(HIPS) : 기존 호스트 운영 서버 상 소프트웨어 기반 IPS
+  - Kernel Dependant : 커널과 함께 동작하여 이벤트를 가로채 처리, 접근제어 포함 Secure OS
+  - Kernel Independent : 커널과 독립적으로 시그니처와 행동 기반 분석, 규칙 위배 이벤트 필터링
+  - 소프트웨어 기반, 호스트 종속적
+ 
+## 침입 차단 시스템, 방화벽(Firewall) 
+방화벽의 기능
+1. 패킷 필터링 : ACL을 생성해 두고 패킷 헤더 정보를 바탕으로 트래픽 제어
+2. 사용자 인증 : 방화벽은 내부 네트워크 접속 시 반드시 통과하므로 인증에 적합
+3. 로깅 및 감사추적 : 모든 접근이 방화벽을 통과할 때 접속정보 등 유용한 통계
+4. NAT(Network Address Translation) : 방화벽 내부 시스템의 IP가 외부에 공개되지 않도록 하여 방화벽 내부 네트워크 구성 은닉 및 다양한 네트워크 구성이 가능하도록 효율성 제공
+
+방화벽의 장단점
+- 장점 : 취약 서비스 보호, 호스트 시스템 접근제어, 로그와 통계, 내부 네트워크에 일관된 정책
+- 단점 : 제한된 서비스 제공, 우회 트래픽 제어 불가, 악의적 내부 사용자 곤란, 새로운 공격 곤란
+
+방화벽 기술
+1. NAT(Network Addresss Translation)
+- 라우터에 의해 적은 숫자의 유효 IP로 많은 시스템이 인터넷에 접속할 수 있게 하는 서비스
+- 외부에서 내부 네트워크로 직접적인 접근이 불가능하게 되므로 네트워크 보안 효과
+2. 패킷 필터링
+- 일정한 규칙에 의해 선택적으로 네트워크의 흐름을 조절, 패킷에 대한 차단과 통과 규칙
+- 사용 목적에 맞는 패킷을 미리 규칙으로 규정해야함, 라우터나 독립적 호스트로도 구현
+3. 경계 네트워크(Perimeter Network)
+- 외부 네트워크와 보호 대상 네트워크 사이에 존재하면서 경계를 구분하는 네트워크, DMZ 내부와 외북 네트워크를 분리하고 내부 시스템의 안정성을 높이는 역할을 수행
+4. 프록시
+- 네트워크 프로그램의 일종, 서버와 클라이언트 간 특정 서비스를 중계
+- 클라이언트 : 서버스를 프록시 서버에 요청 - 서버 : 요청에 따라 외북 네트워크 연결 중계
+5. 베스천 호스트(Bastion Host)
+- 침입 차단 소프트웨어가 설치되어, 내부와 외부 네트워크 간 게이트웨어 역할 수행, 보안 기능
+- 내부 네트워크 사용자들의 주요 접속저, 인터넷에 노출되므로 불필요 명령, 파일은 삭제 필요
+- 주로 웹 서비스나 파일 전송 서비스에 대한 프록시 역할, 인증, 로그기능 담당
+
+방화벽 유형
+1. 패킷 필터링 방화벽
+- 필터링을 위해 IP, 포트 목록을 작성하여 목록을 기반으로 3, 4계층의 차단 피러링, ACL 이용
+- 확장 가능, 높은 성능, 응용 프로그램 독립적, 헤더 조사 안함, 낮은 보안, 연결상태 추적 안함
+2. 상태 기반 검사 방화벽(Stateful Inspection)
+- 패킷 필터링과 달리 각 패킷이 종료될 때까지 패킷 전달 정보를 기억
+- 일정시간 내 송수신 패킷을 모두 검사, 특정 수신을 요청한 송신 패킷이 적잘한지 확인할 경우
+- 방화벽을 통과, 방화벽이 상태정보 테이블을 유지하도록 요구, 3,4계층에서 동작
+3. 프록시 방호벽
+- 메시지가 목적지로 전달되기 전에 가로채고 검사
+- 보호되는 네트워크와 보호되지 않는 네트워크 사이에 위치하여 양방향 연결 형성
+- 외부와 대화하는 유일한 시스템, 외부 컴퓨터가 내부 컴퓨터로 직접 접근할 수 없도록 보장
+- 가능한 경우 으용 프로그램 계층까지 전체적으로 패킷 정보검사, 패킷 필터링보다 높은 보안
+- 트래픽 성능 저하, 응용 프로그램 기반 프록시 방화벽은 확장성, 성능 문제, 기능상 단점 존재
+- 1) 응용 프로그램 수주 프록시 방화벽
+  - 패킷 전체를 검사하고 패킷 내 문맥에 기반하여 접근결정을 니램, 프로토콜과 명령어 구분
+  - 응용 프로그램 프록시는 하나의 서비스나 프로토콜을 위해 동작, 서비스마다 필요
+- 2) 회선 수준 프록시 방화벽
+  - 클라이언트와 서버 사이에 회선을 생성시키고 세션 계층의 보호방법을 제공
+  - 주소, 포트, 프로토콜 유형에 따라 접근권한을 결정하는 패킷 필터와 유사하게 동작
+  - 패킷의 페이로드 데이터보다는 패킷 헤더 데이터를 검사, 패킷 내 컨텐츠는 확인 불가
+  - 비표준포트로 우회하는 접근에 대해서는 방어 불가
+  - SOCKS : 회선 수준 프록시 게이트웨티, 내부에서 외부 서버 접근할 때 침입 차단 기능
+- 3) 커널 프록시 방화벽
+  - 패킷이 커널 프록시 방화벽에 도착하면 새로운 가상 네트워크 스택 생성되는데 이것은 수신된 패킷을 검사하는데 필요한 프로토콜 프록시로만 구성되어 있다.
+  - 모든 조사와 진행이 커널에서 이루어지고 응용 프로그램 계층까지 전달할 필요가 없어서 응용 프로그램 레벨 방화벽보다 좋은 성능을 가짐
+  - 내부와 외부 사이의 연결은 중개인에 차단될 수 있고, 송신지 주소를 바꾸어 NAT 수행 가능
+ 
+*네트워크 계층 : 패킷 필터링 방화벽, 상태기반 감시 방화벽
+전송 계층 : 회선 수준 프록시 방화벽
+응용 프로그램 계층 : 응요 프로그램 수준 프록시 방화벽
+
+4. 개인 방화벽
+- 네트워크에서 오는 원하지 않는 트래픽을 차단하기 위한 애플리케이션 프로그램
+- 일반 방화벽의 작업을 보완, 개인 DSL, 케이블 모뎀 연결 같은 방화벽 없는 경우 대책
+
+방화벽 구조
+1. 스크리닝 라우터 구조(Screening Router)
+- 라우터를 이용해 패킷을 필터링하여 내부 서버 접근을 통제
+- 연결 요청에 따라 패킷 헤더를 분석하여 송수신지 주소, 포트, 제어필드 분석 후 패킷 필터링 규칙에 의해 트래픽의 통과 또는 차단 여부를 판별한다.
+- 구조가 간단하고 장비 추가비용이 없다.
+- 라우터에 복잡한 필터링 필요, 인증 불가, 내부구조 숨기기 어려움, 1개 장애물 : 방어 약함
+2. 이중 네트워크 호스트 구조(Dual-Homed Host Architecture)
+- 두 개의 인터페이스를 가지는 장비, 각각 내부와 외부 네트워크 연결, 라우팅 기능 없음
+- Dual-Homed 게이트웨이가 베스천호스트 기능, 네트워크들의 데이터 공유를 도와주어서 여러 개의 네트워크가 동시에 통신할 수 있도록 지원하는 변환기 역할
+- 네트워크의 모든 패킷에 대해 검사 및 필터링하므로 소규모 네트워크에 적합
+- 기록정보 생성, 방화벽 관리가 용이하며 내부 네트워크를 숨길 수 있음
+- 사용자 정보 입력 필요, 베스천 호스트가 손상되거나 유출되면 취약
+3. 스크린드 호스트 게이트웨이 구조(Screened Host Gateway)
+- 스크리닝 라우터와 이중 네트워크 게이트웨이를 결합한 형태로 내부 네트워크 베스천 호스트와 외부 네트워크 사이에 스크리닝 라우터를 설치하여 구성
+- 한 포트를 외부 네트워크에 연결, 다른 포트는 내부 네트워크에 연결하는 구조
+- 네트워크 계층(스크리닝 라우터)과 응용 계층(베스천 호스트)에서 방어하므로 2단계 방어가 가능, 기본 필터보다 필터링 규칙 단순하며 방어의 깊이가 개선
+- 베스천 호스트 침해 시 보안에 취약, 해커나 악의의 내부자에 스크린라우터의 라우팅 테이블이 변경되면 외부 트래픽이 베스천 호스트 없이 내부 네트워크로 침입
+4. 스크린드 서브넷 구조(Screened Subnet)
+- 스크리닝 라워들 사이에 이중 네트워크 게이트웨이가 위치하는 구조
+- 인터넷과 내부 네트워크 사이에 DMZ라는 네트워크 완충지역 서브넷을 운영
+- 공격자가 내부 접근 권한 획들 전에 세 개의 장비가 유기적으로 협력하여 동작, 강력한 보안
+- DMZ 보안층을 가지고 있어 안전, 모듈러와 유연, 높은 방어 깊이
+- 설치 관리가 어렵고, 구축비용이 높음, 서비스 속도가 느려짐
+
+방화벽 운영 정책과 추가 기능
+1. Deny All : 모든 트래픽을 차단하고, 특정 트래픽만 선별적으로 허용, 중요 서버 접속 등
+2. Permit All : 모든 트래픽을 허용하고, 특정 트래픽만 선별적으로 차단, 내부망 > 외부 차단 등
+
+방화벽의 한계점
+- 방화벽은 내부 시스템이 직접 노출되지 않도록 위험지역 축소, 외부 노출 서비스 방어 어려움
+- 네트워크 트래픽 필터링이므로 허용된 트래픽에 해킹 코드가 있어도 차단하거나 감지 못함
+- 방화벽을 통과하지 않는 트래픽은 제어가 불가
+
+## VPN(Virtual Private NetWork)
+- 공중 네트워크를 이용하여 사설 네트워크가 요구하는 서비스를 제공
+- 공중 네트워크를 경유하여 데이터가 전송되어도 외부로부터 안전하게 보호되도록 주소 및 라우터 체계의 비공개, 데이터 암호화, 사용자 인증 및 접근권한 제한
+- ISP가 제공하는 인터넷 망을 이용하여 구축하므로 장비와 회선비용 절감 가능
+- IPSec, MPLS 등으로 VPN 구축 가능, 위치와 상관없이 ISP의 POP로 접속가능
+- 명확한 표준 없음, 암호화 기술 노출 및 정책적 보안 부족, LAN에 비해 성능 부족
+
+VPN 구현 기술
+1. 터널링
+- VPN 내 두 호스트 간 가상경로를 설정하여 투명한 통신 서비스를 제공
+- 인터넷과 같은 안전하지 않은 네트워크에서 전용선과 같은 강력한 보안 제공
+2. 암호화 및 인증
+- 정보의 기밀성을 제공하기 위해 VPN에서는 대칭키 암호를 사용
+- 암호화 대칭키는 공개키 암호방식을 통한 키 교환을 통해 공유
+- 메시지 인증은 MAC 또는 해시함수를 이용하여 맞는 출처에서 온 사실, 변경 여부를 확인
+- 사용자 인증 VPN 접속요구 시 신원을 확인하는 프로세스이며 보안 서버에서 인증 후 허가
+3. 접근제어
+- 필터링은 접근제어를 결정할 수 있지만 암호화하지 않은 IP 패킷에서만 가능하다.
+
+VPN 구성형태 분류
+1. Intranet VPN
+- 기업 내부 또는 지사까지 VPN을 통해 연결, TCP/IP 기반으로 인터넷과 동일한 장비와 응용 프로그램을 사용할 수 있으며, 방화벽 및 ID, PW 입력하여 접속하는 보안 서비스
+2. Etranet VPN
+- 밀접한 관계나 있는 고객사나 협력업체에게 Intranet을 이용할 수 있도록 확장한 개념 기업 간 원활한 데이터 교환 목적으로 사용, 자사 - 고객 - 력업체를 VPN으로 구성
+3. Remote Access VPN
+- 재택근무자, 원격 접속자는 무선 및 전화접속으로 ISP의 NAS(Network Access Server) 접속
+- 접속경로는 PSTN, ISDN, xDSL 등, NAS는 사용자 접속 인증과 터널링 기능을 수행
+- 가장 중요한 요소 보안, 사용자의 접속 장소와 시간을 알 수 없으므로 철저한 보안 필요
+
+VPN 구성
+1. 터널링
+- 송수신자 간 전송로에 외부 침입을 막기 위해 일종의 파이프를 구성, 보안 기능 지원
+- 터널링되는 데이터를 페이로드(Payload)라고 부르며 내용은 터널링 구간에서 변경되지 않음
+
+2. 2계층 터널링 프로토콜
+- 사용자와 접속하고자 하는 위치의 LAN을 연결, Client-to-LAN, Remote Access VPN에 사용
+- 사용자 측에서 다이얼 업을 이용하여 접속할 때 ID, PW 인증절차를 거쳐 터널링을 시작
+- 2계층 터널링 프로토콜의 터널 구성방법은 클라이언트 개시 VPN과 NAS 개시 VPN이 있다.
+- 1) 클라이언트 개시 VPN(CLient-Intitiated VPN)
+  - PC 등 사용자 장비에 VPN 지원 소프트웨어 설치 필요, 소규모 네트워크 사용
+  - 인증절차 이후 NAS는 터널링 프로토콜에 관여하지 않음(터널링 설정할 때 미관여)
+  - 접속절차 : 사용자는 NAS로 접속 - 인증 - VPN 터널링
+- 2) NAS 개시 VPN(NAS-Initiated VPN)
+  - PC 등 사용자 장비에 별도 장치 및 소프트웨어 불필요
+  - NAS가 인증 및 터널링 설정에 책임(NAS 복잡, 하나의 터널 다중접속 지원으로 효율적)
+  - NAS에 VPN 기능 추가 필요
+  - 접속절차 : NAS로 접속 - 인증 - VPN 터널링
+- 3) PPTP(Point-to-Point Tunneling Protocol)
+  - IP, IPX< NetBEUI(IBM) 페이로드를 암호화하고 IP헤더로 캡슐화하여 전송
+  - 서버가 MS 윈도우 NT 서버로 제약, 사용자는 별도의 PPTP 지원 소프트웨어 필요
+  - 하나의 터널에 하나의 접속, 헤더 압축, 터널 인증 미지원
+- 4) L2F(Layer 2 Forwarding Protocol)
+  - NAS 개시 VPN형, 전송 계층 프로토콜로 UDP를 사용
+  5) L2TP(Layer 2 Tunneling Protocol)
+  - PPTP와 LF를 결합, 호환성 좋음, 터널 인증 기능하지만 패킷 인증, 암호화, 키 관리 미지원 IPSec ESP를 이용하여 보안기능을 제공, 인터넷, X.25, Frame Relay, ATM 지원, UDP 사용
+  - 하나의 터널에 다수 접속가능, 헤더 압축 지원, 터널 인증 지원
+ 
+3. 3계층 터널링 프로토콜
+- IPSec과 MPLS로 대표, 주로 LAN-to-LAN VPN에 이용, 주체는 LAN 단위 네트워크
+- 네트워크 관리자는 원격 노드나 CPE(Customer Premises Equipment)에 소프트웨어 불필요
+- IPSec:IP 계층 보안을 위해 IETF가 제아, VPN 구현에 널리 사용
+- AH(Authentication Header)와 ESP(Encapsulation Security)를 통해 인증, 무결성, 기밀성 제공
+- ISAKMP/IKE(Internet Security Association and Key Management Protocol/Internet Key Exchange)에서는 AH/ESP에 필요한 보안 협상과 키 관리 담당
+
+- IPSec의 두 가지 모드
+- 1) 전송모드 : IP 페이로드를 암호화하여 IP 헤더로 캡슐화
+  2) 터널모드 : IP 패킷을 모두 암호화하여 전송
+ 
+- IPSec의 헤더
+- 1) AH : 데이터와 순서번호 보유, 송신자 확인, 메시지 미수정 보장, 암호화 기능 없음
+  2) ESP : IP 페이로드를 암호화하여 데이터 기밀성 제공, 제 3자에 데이터 노출 차단
+
+| 구분 | 전송 | 터널 |
+| --- | --- | --- |
+| AH | IP헤더와 IP페이로드 사이 AH/ESP 헤더 삽입하여 전송 | IP헤더와 IP페이로드로 새로운 IP 헤더와 AH/ESP 헤더로 캡슐화화여 전송 |
+| AH | 데이터 원본 인증, 무결성 : MD5/SHA 이용 재생공격에 대한 보호 : 순서번호 삽입 | 데이터 원본 인증, 무결성 : MD5/SHA 이용 재생공격에 대한 보호 : 순서번호 삽입 |
+| AH | 전송 계층 이상 프로토콜에 대한 인증만 수행 | 전체 IP 패킷에 대한 인증 새로운 IP헤더 오버헤드 |
+| ESP | 데이터 기밀성, 원본 인증, 무결성, 재생공격 방지 | 데이터 기밀성, 원본 인증, 무결성, 재생공격 방지 |
+| ESP | IP페이로드를 ESP헤더와 트레일러로 캡슐화, 암호화 | IP헤더까지 포함한 원본 패킷을 새로운 IP패킷의 페이로드로 삼입하여 원본 패킷 자체를 암호화 |
+
+4. 인증
+- 데이터 변형 여부하는 데이터 인증, 송신자 접근권한 부여하는 사용자 인증 등
+- Remote Access VPN은 초기 VPN 접근 시 보안서버로부터 인증절차 필요
+- Peer-Peer 방식, Client-Server 방식
+- 1) Peer-Peer 방식
+  - 독립적인 2개의 호스트 간 요청과 응답을 통해 사용자 인증을 수행하는 방식, PKI, IPSec
+  - PAP(Password Authentication Protocol)과 CHAP(Challenge Handshake Authentication Protocol)
+  - PAP는 2-way handshaking 방식으로 인증 요청 호스트에서 사용자 ID, PW를 일반 텍스트 형태로 전달하므로 인증 정보와 외부 노출에 취약하다.
+  - CHAP는 3-way handshaking 방식으로 인증 서버가 호스트에 challenge 메시지를 보내면 호스트는 보안을 위해 해시함수 계산 값을 보내고 인증 서버는 값이 일치하면 인증
+  - Peer-Peer 방식은 호스트 사용자 별로 차별화된 네트워크 접근권한이 불가한 단점
+- 2) Client-Server 방식
+  - 보안관리에 더 편리하고 유연한 방식으로 TACACS, RADIUS가 있음, L2TP
+  - TACACS(Terminal Access Controller Access-Control System)는 인증에 필요한 사용자 ID, PW, PIN, 암호키를 인증서버 DB에서 관리하며 클라이언트 인증 요청 처리 사용자와 서버 사이에 전달되는 모든 데이터는 일반 텍스트 형태
+  - TACACS+에서 MD(Message-Digest), 해시함수를 추가, 멀티프로토콜 로그인 지원
+  - RADIUS(Remote Access Dial-In User Seervice)는 사용자 인증 외에 연결 관리를 위해 NAS와 연동하여 인증 시스템을 구성, NAS는 접속 제공 서버와 동시에 RADIUS 클라이언트 TACACS와 마찬가지로 인증서버에서 인증에 관련된 정보를 단일 DB 형태로 관리
+  - 사용자 암호의 안전한 송수신을 위해 비밀키 암호화 방식을 사용
+  - Client-Server 방식은 PAP과 CAHP 인증 지원 및 Proxy 서버역할도 지원함으로써 Peer-Peer 방식에 비해 더 유연하고 신뢰성 있는 인증 기능을 제공
+ 
+## 네트워크 보안 동향
+- 역추적(traceback)은 해커의 실제 위치를 실시간으로 추적하는 기술
+- TCP connection traceback, connection traceback, IP packet trace back, packet traceback
+- 호스트 기반 연결 역추적 기술, 네트워크 기반 연결 역추적 기술
+
+1. ESM(Enterprise Security Management)
+- 기업과 기관의 보안 정책을 반영, 다양한 보안 시스템을 관리하여 조직의 보안 목적 실현
+- 각종 네트워크 보안제품 인터페이스를 표전화하여 중앙 통합 관리, 침입 종합대응, 모니터링
+- 통합 관제, 운영을 통한 비용 절감, 보안정책 통합 관리를 통한 일관성, 보안 관리 효율성
+- 크로스 플랫폼(Cross Platform) 기반의 오픈 아키텍처로 유연성과 상호 운영성 및 개별 보안 솔루션과 ESM의 연계 및 통제를 위한 에이전트 기반의 클라이언트 통제
+
+2. NAC(Network Access Control)
+- 네트워크에 접속하는 접속 단말의 보안을 검증하여 보안성을 강제화하고 접속을 통제
