--- a/애플리케이션 보안.md
+++ b/애플리케이션 보안.md
@@ -12,4 +12,60 @@
   - 서버가 21번, 1024 이후 포트 사용, 데이터 전송에 1024 이후 포트 사용, 1024 이후 모든 포트 오픈, 보안 위해 서버에서 Passive 모드로 사용 포트 제한
 
 - 포트 정의 1. PORT 명령을 통해 클라이언트가 임시 포트 번호를 선택하고 수동적 설정으로 서버에게 보낼 수 있다. 서버는 그 포트 번호를 사용하고 능동적 설정을 사용한다.
-- 포트 정의 2. PASV 명령을 통해 클라이언트
+- 포트 정의 2. PASV 명령을 통해 클라이언트가 서버에게 먼저 포트를 선택하도록 요청 서버는 그 포트로 수동적 설정을 하고 응답에 그 포트 번호를 전송한다.
+
+2. TFTP(Trivial File Transfer Protocol)
+- 읽기 전용 메모리나 디스크 없는 워크스테이션에 설치될 수 있을 정도로 간단
+- 기본적인 IP와 UDP만을 필요로 함, 보안 기능 없음, 파일 읽기와 쓰기 가능
+- TFRP는 UDP 서비스를 사용한다. 연결 설정과 종료를 제공하지 않으므로 각 데이터 블록을 독립적인 사용자 데이터그램으로 캡슐화하여 전송한다.
+- 또한, 흐름제어와 오류제어 기능이 없으므로 해당 메커니즘을 생성해야 한다.
+- 마법사의 초보 버그(Sorcerer's apprentice bug) : ACK 메시지가 유실되지 않고 지연될 경우 데이터 블록과 응답이 두 번 송수신되게 된다.
+
+3. NFS(Network File System)
+- TCP/IP를 이용하여 네트워크에서 파일 시스템을 운영할 수 있는 프로토콜
+- 데이터 보안과 무결성을 보장하면서 인증된 사용자가 파일을 사용할 수 있도록 제공
+- 클라이언트마다 프로그램을 설치할 필요가 없으므로 관리면에서 효율적
+- 서버 공유자원 접근에 트래픽이 많이 발생하기 때문에 속도가 느린 단점
+
+4. 삼바(Samba)
+- SMB(Server Message Block) 프로토콜을 사용하여 파일, 프린터 자원 공유 기능 제공
+
+## FTP 보안 위협 및 대책
+1. FTP 보안
+- FTP는 보안 이슈화 전에 설계, 비밀번호가 평문이므로 공격자가 가로챌 수 있다.
+- 데이터 전송 연결도 평문, 보안을 위해 FTP 응용 계층 - TCP 계층 사이 보안 소켓 계층 추가 이러한 경우 FTP를 SSL-FTP
+
+2. SFTP 프로그램
+- SSH 클라이언트와 SSH 서버 사이 보안 연결 시, 연결을 사용할 수 있는 응용 프로그램 SFTP
+- SFTP는 SSH 응용 요소의 일부이다. 쌍방향 프로그램이며 파일 전송에 인터페이스 명령 이용
+
+3. TFTP 보안
+- TFTP는 보안에 대한 고려가 없다. 사용자 확인과 비밀번호도 없다.
+- TFTP가 중요하지 않은 파일만 허용, 라우터 보안을 구현하여 특정 호스트만 접근하도록 제한
+
+4. Bounce Attack
+- 익명 FTP 서버를 이용하여, FTP 서버 경유 및 호스트 스캔, FTP PORT 명령 이용
+- FTP 서버를 통해 임의 네트워크 접속을 릴레이, 네트워크를 포트 스캐닝
+
+5. Anonymous FTP 취약점
+- 보안 절차 없는 익명 사용자에게 FTP 서버 접근 허용, 익명 쓰기 권한 획득 시 악성코드 생성
+- 보안대책 : Anonymous 사용자의 루트, bin, etc, pub 디렉터리 소유자와 퍼미션 관리 $root/etc/password 파일에서 anonymous ftp에 불필요한 항목 제거
+
+## 메일 보안
+이메일 관련 프로토콜
+1. SMTP(Simple Mail Transfer Protocol)
+- 송신자 메일 서버, 송신자 메일 서버- 수신자 메일 서버 두 곳에서 사용된다.
+- 수신자 메일 서버 - 수신자 사이에 또 다른 프로토콜이 필요하다.
+- SMTP 단지 명령과 응답들이 어떻게 송신되고 수신되는지 규정한다.
+- 네트워크는 실제 구현을 위해 자유롭게 소프트웨어 패키지를 선택할 수 있다.
+
+- 클라이언트 Well-Known 포트 25번에 TCP 연결 생성, SMTP 서버는 연결 단계 시작
+- 연결 단계에서 서버는 코드 220을 보내 클라이언트의 준비 상태 확인, 안됐다면 코드 421 전송
+- 서버는 코드 250(요청 메시지 완료) 또는 상황에 맞는 코드를 보내어 응답한다.
+- 메시지 전송 후 연결 종료 시 클라이언트는 QUIT 명령을 송신, 서버는 코드 221 등 코드 응답
+
+2. 메시지 액세스 에이전트(POP, IMAP)
+- SMTP는 메시지를 클라이언트로부터 서버로 밀어내는(Push) 프로토콜이다.
+- 서버로부터 클라이언트로 메시지를 당겨오는(Pull) 프로토콜에 POP, IMAP 사용
+- 두 가지 프로토콜 사용 가능, POP3(Post Office Protocol 3), IMAP4(Internet Mail Access P)
+- 1) POP3
